[package]
name = "polar-fusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
arrow = { version = "50.0.0", features = ["ffi"] }
arrow-schema = { version = "50.0.0", features = ["ffi"] }
bytes = "1.5.0"
datafusion = "35.0.0"
libloading = "0.8.1"
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde-pickle = "1.1.1"
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
